<resources>
    <string name="app_name">FooDay</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LogIn">login</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="emailUsername">Email / UserName</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>